merge minigamearenaimpl